# BioPreserve

./: .gitignore  README.md  data  dryrun_all.sh  pixi.toml
adjust/: README.md  adjust.R  adjustR_data.sh  adjustR_individual_prep.sh  adjustR_paired_datasets.sh  all.sh  autoclass.sh  basis.py  gmm_adjust.R  gmm_adjust.py  gmm_global_simple.R  grab_esr1.py  icvae.py  icvae.sh  invert_autoclass.py  run_icvae.py  run_single_adjust.sh  subset_data.R  vfae.sh  wasserstein.sh
adjust_deep_learning/: README.md  Snakefile  autoclass.py  config.yaml  pixi.toml  requirements.txt  run_model.py  run_vfae.py  vfae.py  wasserstein.py
adjust_paired_datasets/: Snakefile  config.yaml
basis_workflow/: OBSOLETE_SCRIPTS_CAPABILITIES.md  Snakefile  config.yaml
bayesian_shift_scale_adjuster/: Snakefile  config.yaml  pixi.toml  run_snakemake.sh
classify_er_all_datasets/: Snakefile  aggregate_metrics.py  classify_feature_importance.py  clean_up.sh  combine_all.py  install_github.R  make_order_files.py  plot_performance.R  plots  run_classifier.py  run_cv_per_test.py  run_scaling_experiment.R  run_snakemake.sh  subset_prep.R  summarize_gold_data.py
simulate_batches/: Snakefile  pixi.toml  pyproject.toml  test.py
simulate_batches/config/: config.yaml
simulate_batches/simulation/: base.py  shift.py
simulate_batches/src/simulation/: __init__.py  base.py  composite.py  covariance.py  scale.py  shift.py  split.py
simulate_batches/tests/: test.py  test_combined_transform.py  test_composite.py  test_composite_debug.py  test_full_workflow.py  test_workflow_scale_only.py
(+224 files in other folders)
